2º parte de arrumando umas coisinhas

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <button id="add">Adiciona carro</button>
-<button id="listar" >Listar Carros</button>
-<button id="remover" >Remover Carros</button>
-<button id="modificar" >Editar Carros</button>
+  <button id="listar" >Listar Carros</button>
+  <button id="remover" >Remover Carros</button>
+  <button id="modificar" >Editar Carros</button>
 
-<table id="listaTudo" ></table>
+  <div class="titulo-lista">
+    <p><strong>Nome</strong></p>
+    <p><strong>Vaga</strong></p>
+  </div>
+
+  <table id="listaTudo" ></table>
 
 
   <script type="text/javascript" src="main.js"> </script>
