implementando função de modificar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="titulo-lista">
           <p><strong>Nome</strong></p>
           <p><strong>Vaga</strong></p>
+          <p><strong>Placa</strong></p>
         </div>
         <table id="listaTudo"></table>
       </div>
