sistema de verificação e form de remover feitos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="formRemoverCar">
+    <div action="" class="form_RM_Car">
+      <label for="campo_1">Coloque a vaga onde o carro que será removido está localizado:</label>
+      <input type="text" id="campo_1" class="cp_1">
+      <div class="action">
+        <button class="btn-form" id="btn-form1">Confirmar</button>
+        <button class="btn-form" id="btn-form2">Cancelar</button>
+      </div>
+
+
+  </div>
+  </div>
   <div class="container-geral">
     <header class="btn-titulo">
       <button class="btn" id="add">Adiciona carro</button>
@@ -27,13 +39,6 @@
     </section>
   </div>
   <!--Form de remover carro-->
-  <!--<div class="formRemoverCar">
-    <form action="" class="form_RM_Car">
-      <label for="campo_1">Coloque a vaga onde o carro que será removido está localizado:</label>
-      <input type="text" id="campo_1" class="cp_1">
-      <input type="submit" class="cp_2_Enviar" value="Confirmar">
-    </form>
-  </div>-->
 
   <script type="text/javascript" src="main.js"> </script>
 </body>
