--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
+  <!--BOOTSTRAP-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+  <!--MAIN CSS-->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,9 +27,9 @@
   </div>
   <div class="container-geral">
     <header class="btn-titulo">
-      <button class="btn" id="add">Adiciona carro</button>
-      <button class="btn" id="remover" >Remover Carros</button>
-      <button class="btn" id="modificar" >Editar Carros</button>
+      <button class="btn btn-outline-success" id="add">Adiciona carro</button>
+      <button class="btn btn-outline-danger" id="remover" >Remover Carros</button>
+      <button class="btn btn-outline-primary" id="modificar" >Editar Carros</button>
     </header>
     
     <section >
@@ -42,4 +47,7 @@
 
   <script type="text/javascript" src="main.js"> </script>
 </body>
+
+  <!--BOOTSTRAP-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </html>
