--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   </div>
   <div class="container-geral">
     <header class="btn-titulo">
-      <button class="btn btn-outline-success" id="add">Adiciona carro</button>
-      <button class="btn btn-outline-danger" id="remover" >Remover Carros</button>
-      <button class="btn btn-outline-primary" id="modificar" >Editar Carros</button>
+      <button class="btn btn btn-primary" id="add">Adiciona carro</button>
+      <button class="btn btn btn-danger" id="remover" >Remover Carros</button>
+      <button class="btn btn btn-success" id="modificar" >Editar Carros</button>
     </header>
     
     <section >
