--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Informe a vaga na qual está o carro que deseja remover</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
        
           <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">@</span>
+            <span class="input-group-text" id="basic-addon1">Vaga</span>
             <input type="text" id="removeVaga" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
           </div>
 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" id="removeConfirm" class="btn btn-primary">Save changes</button>
+          <button type="button" id="removeConfirm" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
         </div>
       </div>
     </div>
