--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Preencha todas as informações para adicionar um novo Veiculo</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -40,14 +40,14 @@
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
           <button type="button" class="btn btn-primary" id="addConfirme" data-bs-dismiss="modal">Confirmar</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Modal 3 -->
+  <!-- Modal 2 -->
   <div class="modal fade" id="removeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -59,24 +59,24 @@
        
           <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">Vaga</span>
-            <input type="text" id="removeVaga" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+            <input type="text" id="removeVaga" class="form-control" placeholder="Vaga" aria-label="Username" aria-describedby="basic-addon1">
           </div>
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" id="removeConfirm" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" id="removeConfirm" class="btn btn-primary" data-bs-dismiss="modal">Confirmar</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Modal 2 -->
+  <!-- Modal 3 -->
   <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Editar informações</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -100,8 +100,8 @@
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" id="editConfirm" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+          <button type="button" id="editConfirm" class="btn btn-primary">Confirmar</button>
         </div>
       </div>
     </div>
