Refatoração e correção do bug NaN

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div class="input-group mb-3">
           <span class="input-group-text" id="basic-addon1">Vaga</span>
           <input
-            type="text"
+            type="number"
             id="addVaga"
             class="form-control"
-            placeholder="Vaga"
+            placeholder="Vaga (Apenas Números)"
             aria-label="Username"
             aria-describedby="basic-addon1"
           />
@@ -92,7 +92,6 @@
           </thead>
           <tbody id="listaTudo"></tbody>
         </table>
-        <!-- </div> -->
       </section>
     </div>
 
