confirmação em remover

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             placeholder="Placa"
             aria-label="Username"
             aria-describedby="basic-addon1"
+            maxlength="8"
           />
         </div>
         <div class="input-group mb-3">
